# rules_kconfig

./: .bazelrc  .gitignore  404.html  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  print.html  rules.html  searchindex.js  searchindex.json  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: github.bazelrc  release_notes.template
.github/workflows/: ci.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: index.md
examples/: README.md
examples/overrides/: .bazelrc  .config  BUILD.bazel  MODULE.bazel  test_overrides.c
examples/settings_labels/: .config  BUILD.bazel  Kconfig  MODULE.bazel  build_defs.bzl  test_overrides.c  test_setting_labels.c
examples/simple/: .bazelrc  .config  BUILD.bazel  Kconfig  MODULE.bazel  test_autoconf.c  test_config_settings.c
kconfig/: BUILD.bazel  defs.bzl  extensions.bzl  kconfig_info.bzl  kconfig_library.bzl  kconfig_overrides_repository.bzl  kconfig_repository.bzl  kconfig_toolchain.bzl  menuconfig.bzl
kconfig/private/: BUILD.bazel  kconfig_autoconf.bzl  kconfig_override_utils.bzl  kconfig_parser.py  kconfig_parser_test.py  kconfig_savedefconfig.bzl  kconfig_setting_alias.bzl  kconfig_settings_group.bzl  kconfig_toolchain_alias.bzl  kconfiglib.bzl  kconfiglib_version.bzl  menuconfig_runner.py  overrides_gen.py  repository_gen.py  repository_gen_test.py
kconfig/toolchain/: BUILD.bazel
tools/constraints/: BUILD.bazel
tools/repo_version/: version_test.py
tools/requirements/: BUILD.bazel  dev_requirements.in  requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
tools/toolchains/: BUILD.bazel
tools/update_version/: BUILD.bazel  update_version.py
