load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "requirements.in",
    "extensions.bzl",
    "kconfig_repository.bzl",
    "defs.bzl",
])

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//kconfig/private:bzl_lib"],
)
