"""Example: using kconfig_overrides_repository to overlay .config onto an external kconfig repo."""

module(
    name = "rules_kconfig_example_overrides",
    version = "0.0.0",
)

bazel_dep(name = "rules_kconfig", version = "0.0.1")
bazel_dep(name = "rules_kconfig_example_simple", version = "0.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_python", version = "1.7.0")

local_path_override(
    module_name = "rules_kconfig",
    path = "../..",
)

local_path_override(
    module_name = "rules_kconfig_example_simple",
    path = "../simple",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12_host")

kconfig = use_extension("@rules_kconfig//kconfig:extensions.bzl", "kconfig")
kconfig.overrides(
    name = "overrides_kconfig",
    config = "//:.config",
    interpreter = "@python_3_12_host//:python",
    kconfig = "@simple_kconfig//:simple_kconfig",
)
use_repo(kconfig, "overrides_kconfig", "simple_kconfig")
