# Kconfig flags are Bazel build settings that can be set on the command line
# or in .bazelrc. This example's .bazelrc sets:
#
#   build --@simple_kconfig//:CONFIG_FOO=true
#
# The kconfig repository auto-generates config_setting targets under
# //settings: for every flag. Bool flags match "true"; int/string flags
# match their Kconfig default value. Use select() on these targets to
# conditionally change build behavior.
#
# You can also invoke the generated macro locally to create config_settings
# for custom values (see the kconfig_config_settings call below).

load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_kconfig//kconfig:menuconfig.bzl", "menuconfig")
load("@simple_kconfig//:settings.bzl", "kconfig_config_settings")

menuconfig(
    name = "menuconfig",
    config = ".config",
    kconfig = "@simple_kconfig//:lib",
)

kconfig_config_settings(
    name = "settings",
    options = {
        "CONFIG_LABEL": [
            "hello",
            "world",
        ],
    },
)

cc_test(
    name = "test_config_settings",
    srcs = ["test_config_settings.c"],
    local_defines =
        select({
            ":settings.CONFIG_FOO_Y": ["FOO_MATCHED"],
            "//conditions:default": [],
        }) +
        select({
            ":settings.CONFIG_COUNT_3": ["COUNT_MATCHED"],
            "//conditions:default": [],
        }) +
        select({
            ":settings.CONFIG_LABEL_hello": ["LABEL_MATCHED"],
            "//conditions:default": [],
        }),
)

cc_test(
    name = "test_autoconf",
    srcs = ["test_autoconf.c"],
    deps = ["@simple_kconfig//:config"],
)
